correction alignement paragraphe

--- a/css/style.css
+++ b/css/style.css
@@ -657,9 +657,9 @@ a {
   display: none;
 }
 
-.paragraphe1, .paragraphe2 {
+.paragraphe_menu {
   text-overflow: ellipsis;
-  white-space: normal;
+  white-space: nowrap;
   overflow: hidden;
 }
 
